--- a/.air.conf
+++ b/.air.conf
@@ -9,9 +9,9 @@ tmp_dir = "tmp"
 
 [build]
 # Just plain old shell command. You could use `make` as well.
-cmd = "go build -o tmp/studyecho studyecho"
+cmd = "go build -o tmp/main github.com/polaris1119/echo-login-example"
 # Binary file yields from `cmd`.
-bin = "tmp/studyecho"
+bin = "tmp/main"
 # Customize binary.
 # full_bin = "APP_ENV=dev APP_USER=air ./tmp/main"
 # This log file places in your tmp_dir.
